social icon on hover bigger

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/social-bar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/social-bar.less
@@ -1,5 +1,7 @@
 ﻿.social-icon{
     float:right;
+    position:relative;
+    width:80px;
 }
 .status-line{
     display:inline-block;
@@ -15,8 +17,13 @@
     width: 22px;
     border-radius: 11px;
     cursor: pointer;
+    position:absolute;
 }
-
+.social-image:hover{
+    height: 24px;
+    width: 24px;
+    border-radius: 12px;
+}
 .left-border {
     float: left;
 }
