--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,7 +1,5 @@
-﻿
-<div class="row">
+﻿<div class="row">
     <div class="left-panel">
-        <div>.</div>
         <div id="leftPanel">
             <topfive-question-left-menu> </topfive-question-left-menu>
             <topfive-user></topfive-user>
