left menu style fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/image-border.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/image-border.less
@@ -3,7 +3,8 @@
     top: 0px;
     bottom: 0px;
 }
-.image-border {
-    height: 100%;
-    width: 3px;
+.horizontal-border {
+    width: 100%;
+    opacity: .75;
+    height: 2px;
 }
