--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
@@ -2,7 +2,7 @@
     margin-bottom: -10px;
     margin-top: 0;
     color: #215ea7;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .left-panel-list {
@@ -11,7 +11,7 @@
 }
 
 .menu-container {
-    margin: 20px auto;
+    margin: 5px auto;
     width: 65%;
     font-size: 12px;
     font-family: myriadpro-regular;
@@ -53,6 +53,10 @@ ul {
         color: #b7b6b6;
     }
 
-.user-list > li {
-    list-style: none;
+.user-list {
+    padding-left: 13px;
 }
+
+    .user-list > li {
+        list-style: none;
+    }
