akash:question report added to question details page

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -1,4 +1,6 @@
 ﻿<div #answerAnchor></div>
+<div #questionReport></div>
+
 <div class="left-panel">
     <related-question-left-menu></related-question-left-menu>
     <related-topic [topicId]="question?.questionTopics[0]?.topicId"></related-topic>
@@ -15,7 +17,7 @@
         <div class="article-details">
             <user-info [userObj]="question.userViewModel" [viewDate]="question?.createdOn" [isAnonymous]="question?.isAnonymous"></user-info>
             <p class="answer-text" [innerHTML]="question.body"></p>
-            <ap-status [isQuestion]='true' [questionObj]="question" (onQuestionDetailClicked)="onQuestionDetailClicked($event)" (onQuestionReportClicked)="onQuestionReportClicked($event)"> </ap-status>
+            <ap-status [isQuestion]='true' [questionObj]="question" (onQuestionDetailClicked)="onQuestionDetailClicked($event)" (onQuestionReportClicked)="onQuestionReportClicked($event,questionId,answerId)"> </ap-status>
             <ap-comment [isQuestion]='true' [questionId]="question?.id"></ap-comment>
         </div>
         <hr />
@@ -35,7 +37,7 @@
             <div class="article-details" *ngIf="answer">
                 <user-info [userObj]="answer?.userViewModel" [viewDate]="answer?.createdOn"></user-info>
                 <p class="answer-text" [innerHTML]="answer.text"></p>
-                <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="answer"> </ap-status>
+                <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="answer" (onQuestionReportClicked)="onQuestionReportClicked($event,questionId,answerId)"> </ap-status>
                 <ap-comment [isQuestion]='false' [questionId]="question?.id" [answerId]="answer.id"></ap-comment>
             </div>
             <hr />
