--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
@@ -14,6 +14,18 @@
     background-color: #f5f5f5;
 }
 
+.left-panel {
+    margin-left: 15px; /*For row:-15px*/
+    float: left;
+    width: 21%;
+    padding-right: 10px;
+}
+
+.right-panel {
+    float: right;
+    width: 21%;
+}
+
 .social-icon > h5 {
     display: inline;
 }
@@ -47,6 +59,7 @@
     font-family: myriadpro-regular;
     display: inline-block;
 }
+
 h2 {
     font-size: 24px;
     font-family: myriadpro-regular;
@@ -70,6 +83,7 @@ p {
     border-bottom: 1px solid #d2cece;
     padding: 0 15px;
 }
-.question-title{
-    flex-grow:1;
+
+.question-title {
+    flex-grow: 1;
 }
