image opacity lower

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
@@ -1,7 +1,7 @@
 ﻿.list-title > h4 {
     margin-bottom: -10px;
     margin-top: 0;
-    color: #215ea7;
+    color: #6795cc;
     font-size: 15px;
 }
 
