--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
@@ -146,15 +146,18 @@
             height: 60px;
         }
 
-         .headerText {
-                 color: aliceblue;
-                  font-size: 14px;
-                      margin-top: 2px;
-                      cursor: pointer;
-         }
-         .align-of-header {
-                 margin-top: 6px;
-         }
+        .headerText {
+            color: aliceblue;
+            font-size: 14px;
+            margin-top: 2px;
+            cursor: pointer;
+        }
+
+        .align-of-header {
+            margin-top: 6px;
+        }
+
+        /*For H*/
     </style>
 </head>
 
@@ -172,61 +175,128 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                        @*<li class="align-of-header"><a asp-controller="Home" asp-action="Index">My Bookmark</a></li>*@
-                       
-                    </ul>
+                    @*<li class="align-of-header"><a asp-controller="Home" asp-action="Index">My Bookmark</a></li>*@
+
+                </ul>
                 <ul></ul>
                 @if (User.Identity.IsAuthenticated)
-                {
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <div class="dropdown-menu-right" role="menu">
-                                
-                                <div aria-expanded="false" class="dropdown-toggle fixed-height headerText" data-toggle="dropdown" href="#">
-                                    <img class="user-image"  src="../../../../profile/LOGO CUADRADO.png" src="../../../../profile/LOGO CUADRADO.png"><span id="headerUserName"></span>
-                                </div>
-                                <ul class="dropdown-menu">
-                                    <li><a href="/dashboard"><span class="fa fa-user"></span> Profile</a></li>
-                                    <li><a href="/questions/getcategory"> <span class="fa fa-sign-out"></span> Manage Categories </a></li>
-                                    <li><a href="/signout"><span class="fa fa-sign-out"></span> Sign Out</a></li>
-                                    
+            {
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <div class="dropdown-menu-right" role="menu">
 
-                                </ul>
+                            <div aria-expanded="false" class="dropdown-toggle fixed-height headerText" data-toggle="dropdown" href="#">
+                                <img class="user-image" src="../../../../profile/LOGO CUADRADO.png" src="../../../../profile/LOGO CUADRADO.png"><span id="headerUserName"></span>
                             </div>
-                        </li>
-                    </ul>
-                    <script>
-                        var url = '@Url.Action("GetUserName", "UserProfile", new { Area = "UserProfile" })';
-                        $.ajax({
-                            url: url,
-                            type: 'GET',
-                            data: null,
-                            async: false,
-                            success: function (respText) {
-                                console.log(respText);
-                               $('#headerUserName').text(respText);
+                            <ul class="dropdown-menu">
+                                <li><a href="/dashboard"><span class="fa fa-user"></span> Profile</a></li>
+                                <li><a href="/questions/getcategory"> <span class="fa fa-sign-out"></span> Manage Categories </a></li>
+                                <li><a href="/signout"><span class="fa fa-sign-out"></span> Sign Out</a></li>
 
-                            },
-                            error: function (jqXhr, textStatus, errorThrown) {
 
-                            }
-                        });
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <script>
+                    var url = '@Url.Action("GetUserName", "UserProfile", new { Area = "UserProfile" })';
+                    $.ajax({
+                        url: url,
+                        type: 'GET',
+                        data: null,
+                        async: false,
+                        success: function (respText) {
+                            console.log(respText);
+                            $('#headerUserName').text(respText);
 
-                    </script>
+                        },
+                        error: function (jqXhr, textStatus, errorThrown) {
+
+                        }
+                    });
+
+                </script>
 
                 }
                 else
                 {
-                    @Html.Partial("_LoginPartial")
+                @Html.Partial("_LoginPartial")
                 }
 
             </div>
         </div>
     </div>
+
+    <nav class="navbar navbar-default no-margin">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header fixed-brand">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" id="menu-toggle">
+                <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
+            </button>
+            <a class="navbar-brand" href="#"><i class="fa fa-rocket fa-4"></i> SEEGATESITE</a>
+        </div><!-- navbar-header-->
+        @*<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <button class="navbar-toggle collapse in" data-toggle="collapse" id="menu-toggle-2"> <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
+                    </li>
+                </ul>
+            </div>*@
+
+        <!-- bs-example-navbar-collapse-1 -->
+    </nav>
+    <div id="wrapper">
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav nav-pills nav-stacked"  data-autohide="false" id="menu">
+                <li>
+                    <a href="#"><span class="fa-stack fa-lg pull-left fa-tags"><i class="fa fa-flag fa-stack-1x "></i></span>Category</a>
+                    <ul class="nav-pills nav-stacked" style="list-style-type: none;">
+                        <li>
+                            <a href="@Url.Action("AddCategory", "Category", new {Area = "Admin"})">
+                                
+                                <span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Category
+                            </a>
+                        </li>
+                        <li><a href="@Url.Action("AddTopic", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Topics</a></li>
+                        <li><a href="@Url.Action("AddKeyword", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Keywords</a></li>
+
+                    </ul>
+                </li>
+                <li>
+                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Overview</a>
+                    <ul class="nav-pills nav-stacked" style="list-style-type: none;">
+                        <li><a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>X</a></li>
+                        <li><a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Y</a></li>
+                        <li><a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Z</a></li>
+
+                    </ul>
+                </li>
+                <li>
+                    <a> <span class="fa-stack fa-lg pull-left"><i class="fa fa-cart-plus fa-stack-1x "></i></span>AddCategory</a>
+                </li>
+                <li>
+                    <a href=""><span class="fa-stack fa-lg pull-left"><i class="fa fa-youtube-play fa-stack-1x "></i></span>About</a>
+                </li>
+                <li>
+                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-wrench fa-stack-1x "></i></span>Services</a>
+                </li>
+                <li>
+                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-server fa-stack-1x "></i></span>Contact</a>
+                </li>
+            </ul>
+        </div><!-- /#sidebar-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+
     <div class="container body-content">
+
         @RenderBody()
 
     </div>
+
+
     <div class="footer">
         <div class="footer-container">
             <div class="footer-right">
@@ -240,5 +310,47 @@
 
 
     @RenderSection("scripts", required: false)
+    <script>
+        $("#menu-toggle").click(function (e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
+        $("#menu-toggle-2").click(function (e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled-2");
+            $('#menu ul').hide();
+        });
+
+        function initMenu() {
+            $('#menu ul').hide();
+            $('#menu ul').children('.current').parent().show();
+            //$('#menu ul:first').show();
+            $('#menu li a').click(
+              function () {
+                  var checkElement = $(this).next();
+                  if ((checkElement.is('ul')) && (checkElement.is(':visible'))) {
+                      return false;
+                  }
+                  if ((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
+                      $('#menu ul:visible').slideUp('normal');
+                      checkElement.slideDown('normal');
+                      return false;
+                  }
+              }
+              );
+        }
+        $(document).ready(function () { initMenu(); });
+
+        $('li.active').removeClass('active');
+        //$('a[href="' + location.pathname + '"]').closest('li').addClass('active');
+
+        $('a[href="' + location.pathname + '"]').parent().addClass('active');
+
+        $('a[href="' + location.pathname + '"]').parent().parent().parent().trigger("click");
+        //$(".nav a").on("click", function () {
+        //    $(".nav").find(".active").removeClass("active");
+        //    $(this).parent().addClass("active");
+        //});
+    </script>
 </body>
 </html>
