search panel z-index issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -13,7 +13,7 @@
         <category-left-menu [caegoryId]="categoryId"></category-left-menu>
     </div>
 </div>
-<div class="center-width center-body">
+<div class="center-width center-body z-ground">
     <div class="loader" *ngIf="loader.isLoading"></div>
     <div class="row">
         <img align="left" class="img-rounded img-category" src="{{categorySelected?.image}}" />
