akash:report added successfully

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
@@ -266,8 +266,8 @@
                 <li>
                     <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Reports</a>
                     <ul class="nav-pills nav-stacked" style="list-style-type: none;">
-                        <li><a href="@Url.Action("QuestionReport", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Question Report</a></li>
-                        <li><a href="@Url.Action("AnswerReport", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Answer Report</a></li>
+                        <li><a href="@Url.Action("Question", "QuestionReport", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Question Report</a></li>
+                        <li><a href="@Url.Action("Answer", "QuestionReport", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Answer Report</a></li>
                        
 
                     </ul>
