--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Answer.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Answer.cshtml
@@ -3,8 +3,7 @@
 @{
     ViewBag.Title = "Index";
 }
-<br />
-<br />
+
 
 <div class="row">
 
@@ -55,9 +54,9 @@
 
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-2">on Question </label>
+                            <label class="control-label col-sm-2">on Answer </label>
                             <div class="col-sm-10">
-                                @Html.DisplayFor(modelItem => item.QuestionTitle, new { @class = "control-label" })
+                                @Html.DisplayFor(modelItem => item.AnswerText, new { @class = "control-label" })
                             </div>
 
                         </div>
