--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
@@ -74,7 +74,7 @@
                                 <button id="btnTopic" type="button" class="btn btn-default" onclick="Discard(this, '@item.Id')">
                                     Ignore Report
                                 </button>
-                                <button id="btnTopic" type="button" class="btn btn-default" onclick="Delete(this, '@item.Id', '@item.QuestionId')">
+                                <button id="btnTopic" type="button" class="btn btn-default" onclick="Delete(this, '@item.Id', '@item.QuestionId','@item.AnswerId')">
                                     Delete
                                 </button>
                             </div>
@@ -175,12 +175,12 @@
         });
 
     }
-    function Delete(element, Id, QuestionId) {
+    function Delete(element, Id, QuestionId, AnswerId) {
         //QuestionDelete
         var obj = {};
         obj.Id = Id;
         obj.QuestionId = QuestionId;
-        obj.AnswerId = null;
+        obj.AnswerId = AnswerId;
         console.log(obj);
         var url = '@Url.Action("Delete", "QuestionReport", new { Area = "Admin" })';
         $.ajax({
