--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -33,13 +33,16 @@
 
     </div>
     <div class="modal-body">
-        <ckeditor [(ngModel)]="answerText" [ngModelOptions]="{standalone: true}" id="answer"
+        <!--<ckeditor [(ngModel)]="answerText" [ngModelOptions]="{standalone: true}" id="answer"
                   required name="answerField" #answerField="ngModel"
                   [config]="{   filebrowserUploadUrl : '/browser/browse/type/all',
                                            filebrowserImageUploadUrl : '/browser/browse/type/image',
                               removeButtons : 'About,Maximize,TextColor,Styles,Format,Font,FontSize,Flash,Table,HorizontalRule,Smiley,SpecialChar,PageBreak,Iframe,Unlink,Anchor,BidiLtr,Language,BidiRtl,JustifyLeft,JustifyCenter,JustifyRight,JustifyBlock,CreateDiv,Blockquote,Outdent,Indent,BulletedList,NumberedList,CopyFormatting,RemoveFormat,Underline,Strike,Subscript,Superscript,Form,Radio,TextField,Textarea,Select,Button,ImageButton,HiddenField,Scayt,Find,SelectAll,Replace,BGColor,ShowBlocks,Checkbox,Source,Save,Templates,Cut,Undo,Redo,Copy,Paste,PasteText,PasteFromWord,Print,Preview,NewPage,Checkbox'}"
                   debounce="500">
-        </ckeditor>
+        </ckeditor>-->
+        <quill-editor  [(ngModel)]="answerText" [ngModelOptions]="{standalone: true}"
+                      [modules]="{  toolbar: [['bold', 'italic', 'underline'], ['link', 'image']] }"
+                       required name="answerField" #answerField="ngModel"></quill-editor>
     </div>
     <div class="modal-footer">
         <div style="float:left;color:#737373;line-height: 34px;">
