--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -31,8 +31,8 @@
             <img class="social-image" id="img3" src="../images/icon-external-link.png" />
         </a>
         
-        <div class="other-function">
-            <a [popover]="myPopover" >...</a>
+        <div class="other-function" id="img4">
+            <a [popover]="myPopover"  >...</a>
             <popover-content #myPopover
                                 placement="top"
                                 [closeOnClickOutside]="true">
