akash:admijn fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
@@ -190,7 +190,7 @@
                             </div>
                             <ul class="dropdown-menu">
                                 <li><a href="/dashboard"><span class="fa fa-user"></span> Profile</a></li>
-                                <li><a href="/questions/getcategory"> <span class="fa fa-sign-out"></span> Manage Categories </a></li>
+                                <li><a href="@Url.Action("AddCategory", "Category", new {Area = "Admin"})"> <span class="fa fa-sign-out"></span> Manage Categories </a></li>
                                 <li><a href="/signout"><span class="fa fa-sign-out"></span> Sign Out</a></li>
 
 
@@ -227,24 +227,24 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-default no-margin">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header fixed-brand">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" id="menu-toggle">
-                <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
-            </button>
-            <a class="navbar-brand" href="#"><i class="fa fa-rocket fa-4"></i> SEEGATESITE</a>
-        </div><!-- navbar-header-->
-        @*<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        <button class="navbar-toggle collapse in" data-toggle="collapse" id="menu-toggle-2"> <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
-                    </li>
-                </ul>
-            </div>*@
+    @*<nav class="navbar navbar-default no-margin">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header fixed-brand">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" id="menu-toggle">
+            <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
+        </button>
+        <a class="navbar-brand" href="#"><i class="fa fa-rocket fa-4"></i> SEEGATESITE</a>
+    </div><!-- navbar-header-->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    <button class="navbar-toggle collapse in" data-toggle="collapse" id="menu-toggle-2"> <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
+                </li>
+            </ul>
+        </div>
 
         <!-- bs-example-navbar-collapse-1 -->
-    </nav>
+    </nav>*@
     <div id="wrapper">
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
@@ -255,11 +255,11 @@
                         <li>
                             <a href="@Url.Action("AddCategory", "Category", new {Area = "Admin"})">
                                 
-                                <span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Category
+                                <span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>AddCategory
                             </a>
                         </li>
-                        <li><a href="@Url.Action("AddTopic", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Topics</a></li>
-                        <li><a href="@Url.Action("AddKeyword", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Keywords</a></li>
+                        @*<li><a href="@Url.Action("AddTopic", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Topics</a></li>*@
+                        <li><a href="@Url.Action("AddKeyword", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>EditCategory</a></li>
 
                     </ul>
                 </li>
