QUestion hopme more function issue fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -67,7 +67,7 @@
          (scrolled)="onScrollDown()">
     </div>
 
-    <div *ngFor="let question of questions" class="row">
+    <div *ngFor="let question of questions">
         <question-panel [question]="question"></question-panel>
     </div>
 </div>
