akash:catgeory deleted successfully

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
@@ -181,46 +181,46 @@
                 <ul></ul>
                 @if (User.Identity.IsAuthenticated)
             {
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <div class="dropdown-menu-right" role="menu">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <div class="dropdown-menu-right" role="menu">
 
-                            <div aria-expanded="false" class="dropdown-toggle fixed-height headerText" data-toggle="dropdown" href="#">
-                                <img class="user-image" src="../../../../profile/LOGO CUADRADO.png" src="../../../../profile/LOGO CUADRADO.png"><span id="headerUserName"></span>
+                                <div aria-expanded="false" class="dropdown-toggle fixed-height headerText" data-toggle="dropdown" href="#">
+                                    <img class="user-image" src="../../../../profile/LOGO CUADRADO.png" src="../../../../profile/LOGO CUADRADO.png"><span id="headerUserName"></span>
+                                </div>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/dashboard"><span class="fa fa-user"></span> Profile</a></li>
+                                    <li><a href="@Url.Action("AddCategory", "Category", new {Area = "Admin"})"> <span class="fa fa-sign-out"></span> Manage Categories </a></li>
+                                    <li><a href="/signout"><span class="fa fa-sign-out"></span> Sign Out</a></li>
+
+
+                                </ul>
                             </div>
-                            <ul class="dropdown-menu">
-                                <li><a href="/dashboard"><span class="fa fa-user"></span> Profile</a></li>
-                                <li><a href="@Url.Action("AddCategory", "Category", new {Area = "Admin"})"> <span class="fa fa-sign-out"></span> Manage Categories </a></li>
-                                <li><a href="/signout"><span class="fa fa-sign-out"></span> Sign Out</a></li>
+                        </li>
+                    </ul>
+                    <script>
+                        var url = '@Url.Action("GetUserName", "UserProfile", new { Area = "UserProfile" })';
+                        $.ajax({
+                            url: url,
+                            type: 'GET',
+                            data: null,
+                            async: false,
+                            success: function (respText) {
+                                console.log(respText);
+                                $('#headerUserName').text(respText);
 
+                            },
+                            error: function (jqXhr, textStatus, errorThrown) {
 
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-                <script>
-                    var url = '@Url.Action("GetUserName", "UserProfile", new { Area = "UserProfile" })';
-                    $.ajax({
-                        url: url,
-                        type: 'GET',
-                        data: null,
-                        async: false,
-                        success: function (respText) {
-                            console.log(respText);
-                            $('#headerUserName').text(respText);
+                            }
+                        });
 
-                        },
-                        error: function (jqXhr, textStatus, errorThrown) {
-
-                        }
-                    });
-
-                </script>
+                    </script>
 
                 }
                 else
                 {
-                @Html.Partial("_LoginPartial")
+                    @Html.Partial("_LoginPartial")
                 }
 
             </div>
@@ -228,38 +228,39 @@
     </div>
 
     @*<nav class="navbar navbar-default no-margin">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header fixed-brand">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" id="menu-toggle">
-            <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
-        </button>
-        <a class="navbar-brand" href="#"><i class="fa fa-rocket fa-4"></i> SEEGATESITE</a>
-    </div><!-- navbar-header-->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <button class="navbar-toggle collapse in" data-toggle="collapse" id="menu-toggle-2"> <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
-                </li>
-            </ul>
-        </div>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header fixed-brand">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" id="menu-toggle">
+                <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
+            </button>
+            <a class="navbar-brand" href="#"><i class="fa fa-rocket fa-4"></i> SEEGATESITE</a>
+        </div><!-- navbar-header-->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <button class="navbar-toggle collapse in" data-toggle="collapse" id="menu-toggle-2"> <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
+                    </li>
+                </ul>
+            </div>
 
-        <!-- bs-example-navbar-collapse-1 -->
-    </nav>*@
+            <!-- bs-example-navbar-collapse-1 -->
+        </nav>*@
     <div id="wrapper">
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
-            <ul class="sidebar-nav nav-pills nav-stacked"  data-autohide="false" id="menu">
+            <ul class="sidebar-nav nav-pills nav-stacked" data-autohide="false" id="menu">
                 <li>
                     <a href="#"><span class="fa-stack fa-lg pull-left fa-tags"><i class="fa fa-flag fa-stack-1x "></i></span>Category</a>
                     <ul class="nav-pills nav-stacked" style="list-style-type: none;">
                         <li>
                             <a href="@Url.Action("AddCategory", "Category", new {Area = "Admin"})">
-                                
+
                                 <span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>AddCategory
                             </a>
                         </li>
-                        @*<li><a href="@Url.Action("AddTopic", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Topics</a></li>*@
                         <li><a href="@Url.Action("AddKeyword", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>EditCategory</a></li>
+
+                        <li><a href="@Url.Action("DeleteCategory", "Category", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>DeleteCategory</a></li>
 
                     </ul>
                 </li>
@@ -268,22 +269,22 @@
                     <ul class="nav-pills nav-stacked" style="list-style-type: none;">
                         <li><a href="@Url.Action("Question", "QuestionReport", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Question Report</a></li>
                         <li><a href="@Url.Action("Answer", "QuestionReport", new {Area = "Admin"})"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Answer Report</a></li>
-                       
+
 
                     </ul>
                 </li>
-                <li>
-                    <a  href="#"> <span class="fa-stack fa-lg pull-left"><i class="fa fa-cart-plus fa-stack-1x "></i></span>AddCategory</a>
-                </li>
-                <li>
-                    <a href=""><span class="fa-stack fa-lg pull-left"><i class="fa fa-youtube-play fa-stack-1x "></i></span>About</a>
-                </li>
-                <li>
-                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-wrench fa-stack-1x "></i></span>Services</a>
-                </li>
-                <li>
-                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-server fa-stack-1x "></i></span>Contact</a>
-                </li>
+                @* <li>
+                        <a  href="#"> <span class="fa-stack fa-lg pull-left"><i class="fa fa-cart-plus fa-stack-1x "></i></span>AddCategory</a>
+                    </li>
+                    <li>
+                        <a href=""><span class="fa-stack fa-lg pull-left"><i class="fa fa-youtube-play fa-stack-1x "></i></span>About</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-wrench fa-stack-1x "></i></span>Services</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-server fa-stack-1x "></i></span>Contact</a>
+                    </li>*@
             </ul>
         </div><!-- /#sidebar-wrapper -->
 
