--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
@@ -48,6 +48,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="control-label col-sm-2">Commented </label>
+                            <div class="col-sm-2">
+                                @Html.TextBoxFor(modelItem => item.Comment, new { @class = "form-control", @placeholder = "No comments" })
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="control-label col-sm-2" for="pwd">By user:</label>
                             <div class="col-sm-2">
                                 @Html.TextBoxFor(modelItem => item.UserFullName, new { @class = "form-control" })
