akash:admin pannel work successfully

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
@@ -47,7 +47,7 @@
 <script>
     function DeleteCategory(element,categoryId,categoryName)
     {
-        var confrimDelete = confirm("Do you really want me to say hi?");
+        var confrimDelete = confirm("Do you really want to delete?");
         if (confrimDelete == true) {
             var url = '@Url.Action("DeleteCategory", "Category", new { Area = "Admin" })';
             var obj = {};
