--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/QuestionReport/Question.cshtml
@@ -76,7 +76,7 @@
                         </div>
                         <br />
                         <div class="form-group">
-                            <div class="col-sm-4" style="    margin-left: 105px;">
+                            <div class="col-sm-4" style=" margin-left: 105px;">
                                 <button id="btnTopic" type="button" class="btn btn-default" onclick="Discard(this, '@item.Id')">
                                     Ignore Report
                                 </button>
@@ -84,9 +84,9 @@
                                     Delete
                                 </button>
                             </div>
-                            
-                         
-                            
+
+
+
                         </div>
 
                     </form>
@@ -132,7 +132,7 @@
                 <h4 class="modal-title">Discard Report </h4>
             </div>
             <div class="modal-body">
-                <input type="text" id="Id" value="1" />
+                <input type="hidden" id="Id"  />
                 <div class="form-group">
                     <label class="control-label">Admin Comment</label>
                     <input id="ModiferComment" type="text" class="form-control" placeholder="Name">
@@ -156,53 +156,63 @@
             backdrop: 'static'
         });
     }
+
     function InvalidReport(Id, ModiferComment) {
         console.log(Id + '->' + ModiferComment);
-        var obj = {};
-        obj.Id = Id;
-        obj.ModiferComment = ModiferComment;
-        console.log(obj);
-        var url = '@Url.Action("InvalidReport", "QuestionReport", new { Area = "Admin" })';
-        $.ajax({
-            url: url,
-            type: 'POST',
-            data: obj,
-            async: false,
-            success: function (respText) {
-                console.log(respText);
-                alert('comment discarded successfully');
-                location.reload(true);
+        var confrimDelete = confirm("Do you really want to delete?");
+        if (confrimDelete == true) {
 
 
-            },
-            error: function (jqXhr, textStatus, errorThrown) {
+            var obj = {};
+            obj.Id = Id;
+            obj.ModiferComment = ModiferComment;
+            console.log(obj);
+            var url = '@Url.Action("InvalidReport", "QuestionReport", new {Area = "Admin"})';
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: obj,
+                async: false,
+                success: function (respText) {
+                    console.log(respText);
+                    alert('comment discarded successfully');
+                    location.reload(true);
 
-            }
-        });
+
+                },
+                error: function (jqXhr, textStatus, errorThrown) {
+
+                }
+            });
+        }
 
     }
     function Delete(element, Id, QuestionId, AnswerId) {
         //QuestionDelete
-        var obj = {};
-        obj.Id = Id;
-        obj.QuestionId = QuestionId;
-        obj.AnswerId = AnswerId;
-        console.log(obj);
-        var url = '@Url.Action("Delete", "QuestionReport", new { Area = "Admin" })';
-        $.ajax({
-            url: url,
-            type: 'POST',
-            data: obj,
-            async: false,
-            success: function (respText) {
-                console.log(respText);
-                alert('Question deleted successfully');
-                location.reload(true);
-            },
-            error: function (jqXhr, textStatus, errorThrown) {
 
-            }
-        });
+        var confrimDelete = confirm("Do you really want to delete?");
+        if (confrimDelete == true) {
+            var obj = {};
+            obj.Id = Id;
+            obj.QuestionId = QuestionId;
+            obj.AnswerId = AnswerId;
+            console.log(obj);
+            var url = '@Url.Action("Delete", "QuestionReport", new { Area = "Admin" })';
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: obj,
+                async: false,
+                success: function (respText) {
+                    console.log(respText);
+                    alert('Question deleted successfully');
+                    location.reload(true);
+                },
+                error: function (jqXhr, textStatus, errorThrown) {
+
+                }
+            });
+        }
 
     }
 </script>
