Profile save databinding adeed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/biography.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/biography.component.html
@@ -9,11 +9,11 @@
                 <div class="row">
                     <div class="form-group col-md-7">
                         <label>TAG LINE</label>
-                        <input type="text" [(ngModel)]="biography.tagLine" name="tagLine" class="form-control profile-form">
+                        <input type="text"  [ngModel]="biography.tagLine" (ngModelChange)="biography.tagLine=$event" name="tagLine" class="form-control profile-form">
                     </div>
                     <div class="col-md-7">
                         <label>ABOUT ME*</label>
-                        <textarea [(ngModel)]="biography.aboutMe" name="aboutMe" rows="3" maxlength="3" class="form-control profile-form"></textarea>
+                        <textarea  [ngModel]="biography.aboutMe" (ngModelChange)="biography.aboutMe=$event" name="aboutMe" rows="3" class="form-control profile-form"></textarea>
                     </div>
                 </div>
             </div>
